--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -45,7 +46,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: 'DM Sans', sans-serif;
 }
 
 .library {
@@ -76,7 +76,6 @@ body {
     border:0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -118,7 +117,6 @@ body {
 .section-playlist-content .text {
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist-content .title {
@@ -138,7 +136,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -180,12 +177,12 @@ footer {
     justify-content: space-between;
     left: 0;
     bottom: 0;
-    width: 100%;
-    position: absolute;
+    right: 0;
+    position: fixed;
     padding: 20px 0;
     background: rgb(175,0,145);
-    background: linear-gradient(90deg, rgba(175,0,145,1) 0%, rgba(115,52,148,1) 47%, rgba(0,115,184,1) 100%);
-    font-family: "DM Sans", sans-serif;
+    background: linear-gradient(90deg, rgba(175,0,145,1) 0%, rgba(115,52,148,1) 50%, rgba(0,115,184,1) 100%);
+    
 }
 
 .mensagem-footer {
@@ -197,11 +194,13 @@ footer {
 }
 
 .mensagem-footer .principal {
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: 400;
 }
 
 .mensagem-footer .sec {
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .footer-button {
